Issue #1 charts w horizontal scrolling headerrow fix

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,12 +3,15 @@
 * {
     box-sizing: border-box;
 }
-html,body {
+
+html,
+body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -24,12 +27,13 @@ body{
     column-gap: 50px;
     width: 100vw;
     height: 100vh;
-    
+
     &.mini {
         height: 60px;
         width: fit-content;
         margin: 0 auto;
     }
+
     .main_icon {
         box-sizing: border-box;
         width: 80px;
@@ -40,16 +44,18 @@ body{
         cursor: pointer;
         color: #666;
 
-        &:hover{
+        &:hover {
             outline: 1px dashed #999;
             box-shadow: 0px -10px 50px #ffee00;
             background-color: #fff;
         }
+
         &.selected {
             outline: 2px dashed rgb(0, 84, 112);
             box-shadow: 0px -10px 50px rgb(0, 84, 112);
             background-color: #fff;
         }
+
         &::after {
             margin-top: 80%;
             display: block;
@@ -59,24 +65,31 @@ body{
 
         &#computer-btn {
             background-image: url('./icons/computer.png');
+
             &::after {
                 content: 'View files';
             }
         }
+
         &#runbatch-btn {
             background-image: url('./icons/batch_samples.png');
+
             &::after {
                 content: 'Run Batch Samples';
             }
         }
+
         &#runmanual-btn {
             background-image: url('./icons/sm_manual_sample.png');
+
             &::after {
                 content: 'Run Manual Sample';
             }
         }
+
         &#runqc-btn {
             background-image: url('./icons/qc_samples.png');
+
             &::after {
                 content: 'Run QC Samples';
             }
@@ -98,7 +111,8 @@ body{
     padding: 5px;
     background-color: #000;
 
-    #top-menu, #bot-menu{
+    #top-menu,
+    #bot-menu {
         width: 100%;
         height: 60px;
         background-color: #eee;
@@ -107,15 +121,18 @@ body{
             padding: 0.6em;
             cursor: pointer;
         }
-        button.selected{
+
+        button.selected {
             background-color: rgb(112, 198, 255);
             font-weight: 600;
         }
+
         #back-btn {
             display: none;
             float: right;
         }
     }
+
     #content {
         width: 100%;
         height: calc(100% - 100px);
@@ -124,6 +141,7 @@ body{
         background-color: #eee;
         outline: 1px solid #555;
         box-sizing: border-box;
+
         #graphscontainer {
             display: flex;
             flex-direction: column;
@@ -145,23 +163,24 @@ body{
                     font-size: 12px;
                     font-weight: bold;
                     border: 1px solid #555;
-                    padding: 5px;   
+                    padding: 5px;
                 }
             }
+
             .graphrow {
-                font-size:  12px;
+                font-size: 12px;
                 position: relative;
                 height: 100px;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
-
                 border: 1px solid #555;
-            
-                .titleCol{
+
+                .titleCol {
                     width: 20px;
                     z-index: 1;
-                    .ytitle{
+
+                    .ytitle {
                         font-size: 10px;
                         writing-mode: vertical-rl;
                         text-orientation: mixed;
@@ -169,8 +188,8 @@ body{
                         height: 100%;
                     }
                 }
-                
-                .graph{
+
+                .graph {
                     width: calc(100% - 160px);
                     overflow: hidden;
                     position: relative;
@@ -179,58 +198,76 @@ body{
                     &.headingRow {
                         overflow-x: auto;
                     }
+
                     canvas {
                         position: absolute;
                         left: 0;
                     }
                 }
+
                 .dataSummary {
                     height: 100%;
                     width: 100px;
                     flex-shrink: 0;
                     flex-grow: 0;
                     z-index: 1;
-                    &.yaxis{
+
+                    &.yaxis {
                         width: 60px;
                         background-color: rgb(247, 253, 255);
                     }
+
                     table {
                         width: 100%;
                         height: 100%;
                         text-align: center;
+
                         td:nth-child(1) {
                             width: 50%;
                         }
                     }
                 }
             }
+            .graphrow.headingRow {
+                position: absolute;
+                width: calc(100% - 27px);
+                background-color: #eee;
+                z-index: 10;
+            }
         }
+
         .tableFixHead {
             overflow-y: auto;
             overflow-x: hidden;
             height: 100%;
-        
+
             >table {
                 display: none;
-                width:100%;
+                width: 100%;
                 text-align: center;
                 border-collapse: collapse;
+
                 th {
                     position: sticky;
                     top: 0px;
-                    background: #eee;                
+                    background: #eee;
                 }
-                th:first-child, td:first-child{
+
+                th:first-child,
+                td:first-child {
                     border-right: 1px solid #555;
                     font-size: 18px;
                 }
+
                 tr {
                     height: 26px;
                 }
+
                 /* striped rows */
-                tbody tr:nth-of-type(odd) { 
-                    background-color:#ccc;
+                tbody tr:nth-of-type(odd) {
+                    background-color: #ccc;
                 }
+
                 /* hover row */
                 tbody tr:hover {
                     background-color: #fffb00;
@@ -243,7 +280,7 @@ body{
 
 }
 
-#samplesContainerMenu{
+#samplesContainerMenu {
     box-sizing: border-box;
     flex: 1;
     height: 100vh;
@@ -251,5 +288,3 @@ body{
     flex-direction: column;
     background-color: #eee;
 }
-
-
